Fix aligning

--- a/css/style.css
+++ b/css/style.css
@@ -67,6 +67,7 @@ img {
 
 /* task8 */
 .js-controls {
+  text-align: center;
   margin-top: 20px;
   margin-bottom: 10px;
 }
